--- a/index.html
+++ b/index.html
@@ -14,6 +14,35 @@
 
 </head>
 <body>
-    
+    <!----------------------------------------------------------------
+                             Header Starts 
+    ------------------------------------------------------------------>
+    <header>
+        <section class="header-section">
+            <div class="header-details">
+                <h1 class="header-title">The Greatest show on the earth</h1>
+                <p class="header-info">The FIFA World Cup, often simply called the World Cup, is an international association football competition contested by the senior men's national teams.</p>
+                <a href="" class="btn checked">Watch Live<i class="fa-solid fa-angle-right"></i></a>
+            </div>
+            <div class="header-image">
+                <img src="assets/Banner Image.png" alt="">
+            </div>
+        </section>
+    </header>
+    <!----------------------------------------------------------------
+                             Header Ends
+    ------------------------------------------------------------------>
+    <!----------------------------------------------------------------
+                             Main Starts 
+    ------------------------------------------------------------------>
+    <!----------------------------------------------------------------
+                             Main Ends
+    ------------------------------------------------------------------>
+    <!----------------------------------------------------------------
+                             Footer Starts 
+    ------------------------------------------------------------------>
+    <!----------------------------------------------------------------
+                             Footer Ends
+    ------------------------------------------------------------------>
 </body>
 </html>
