--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <!----------------------------------------------------------------
                              Header Starts 
     ------------------------------------------------------------------>
+
     <header>
         <section class="header-section">
             <div class="header-details">
@@ -24,17 +25,159 @@
                 <p class="header-info">The FIFA World Cup, often simply called the World Cup, is an international association football competition contested by the senior men's national teams.</p>
                 <a href="" class="btn checked">Watch Live<i class="fa-solid fa-angle-right"></i></a>
             </div>
+            <!-- Header image -->
             <div class="header-image">
                 <img src="assets/Banner Image.png" alt="">
             </div>
         </section>
     </header>
+
+
     <!----------------------------------------------------------------
                              Header Ends
     ------------------------------------------------------------------>
+
     <!----------------------------------------------------------------
                              Main Starts 
     ------------------------------------------------------------------>
+    <main>
+        <section class="mid-section">
+            <section class="nav-section">
+                <!-- Buttons on the left side -->
+                <a class="nav-btn" target="_blank" href="matches.html">Upcoming Match</a>
+                <a class="nav-btn" target="_blank" href="">All Group</a>
+                <a class="checked nav-btn" target="_blank" href="index.html">Blog</a>
+            </section>
+            <section class="articles">
+                <article class="article">
+                    <div class="thumnail"><img src="assets/Blog Image.png" alt=""></div>
+                    <div class="article-details">
+                        <a href="#" class="transfer-btn">Transfer</a>
+                        <h3 class="blog-title">Transfer Live: Chlesea in talks 
+                        over Kimpenbe transfer</h3>
+                        <div class="blog-details">
+                            <img src="assets/Time Icon.png" alt="">
+                            <p>10h</p>
+                            <img src="assets/Chat Icon.png" alt="">
+                            <p>23</p>
+                        </div>
+                    </div>
+                </article>
+                <article class="article">
+                    <div class="thumnail"><img src="assets/Blog Image.png" alt=""></div>
+                    <div class="article-details">
+                        <a href="#" class="transfer-btn">Transfer</a>
+                        <h3 class="blog-title">Transfer Live: Chlesea in talks 
+                        over Kimpenbe transfer</h3>
+                        <div class="blog-details">
+                            <img src="assets/Time Icon.png" alt="">
+                            <p>10h</p>
+                            <img src="assets/Chat Icon.png" alt="">
+                            <p>23</p>
+                        </div>
+                    </div>
+                </article>
+                <article class="article">
+                    <div class="thumnail"><img src="assets/Blog Image.png" alt=""></div>
+                    <div class="article-details">
+                        <a href="#" class="transfer-btn">Transfer</a>
+                        <h3 class="blog-title">Transfer Live: Chlesea in talks 
+                        over Kimpenbe transfer</h3>
+                        <div class="blog-details">
+                            <img src="assets/Time Icon.png" alt="">
+                            <p>10h</p>
+                            <img src="assets/Chat Icon.png" alt="">
+                            <p>23</p>
+                        </div>
+                    </div>
+                </article>
+                <article class="article">
+                    <div class="thumnail"><img src="assets/Blog Image.png" alt=""></div>
+                    <div class="article-details">
+                        <a href="#" class="transfer-btn">Transfer</a>
+                        <h3 class="blog-title">Transfer Live: Chlesea in talks 
+                        over Kimpenbe transfer</h3>
+                        <div class="blog-details">
+                            <img src="assets/Time Icon.png" alt="">
+                            <p>10h</p>
+                            <img src="assets/Chat Icon.png" alt="">
+                            <p>23</p>
+                        </div>
+                    </div>
+                </article>
+                <article class="article">
+                    <div class="thumnail"><img src="assets/Blog Image.png" alt=""></div>
+                    <div class="article-details">
+                        <a href="#" class="transfer-btn">Transfer</a>
+                        <h3 class="blog-title">Transfer Live: Chlesea in talks 
+                        over Kimpenbe transfer</h3>
+                        <div class="blog-details">
+                            <img src="assets/Time Icon.png" alt="">
+                            <p>10h</p>
+                            <img src="assets/Chat Icon.png" alt="">
+                            <p>23</p>
+                            </div>
+                    </div>
+                </article>
+                <article class="article">
+                    <div class="thumnail"><img src="assets/Blog Image.png" alt=""></div>
+                    <div class="article-details">
+                        <a href="#" class="transfer-btn">Transfer</a>
+                        <h3 class="blog-title">Transfer Live: Chlesea in talks 
+                        over Kimpenbe transfer</h3>
+                        <div class="blog-details">
+                            <img src="assets/Time Icon.png" alt="">
+                            <p>10h</p>
+                            <img src="assets/Chat Icon.png" alt="">
+                            <p>23</p>
+                        </div>
+                    </div>
+                </article>
+                <article class="article">
+                    <div class="thumnail"><img src="assets/Blog Image.png" alt=""></div>
+                    <div class="article-details">
+                        <a href="#" class="transfer-btn">Transfer</a>
+                        <h3 class="blog-title">Transfer Live: Chlesea in talks 
+                        over Kimpenbe transfer</h3>
+                        <div class="blog-details">
+                            <img src="assets/Time Icon.png" alt="">
+                            <p>10h</p>
+                            <img src="assets/Chat Icon.png" alt="">
+                            <p>23</p>
+                        </div>
+                    </div>
+                </article>
+                <article class="article">
+                    <div class="thumnail"><img src="assets/Blog Image.png" alt=""></div>
+                    <div class="article-details">
+                        <a href="#" class="transfer-btn">Transfer</a>
+                        <h3 class="blog-title">Transfer Live: Chlesea in talks 
+                        over Kimpenbe transfer</h3>
+                        <div class="blog-details">
+                            <img src="assets/Time Icon.png" alt="">
+                            <p>10h</p>
+                            <img src="assets/Chat Icon.png" alt="">
+                            <p>23</p>
+                        </div>
+                    </div>
+                </article>
+                <article class="article">
+                    <div class="thumnail"><img src="assets/Blog Image.png" alt=""></div>
+                    <div class="article-details">
+                        <a href="#" class="transfer-btn">Transfer</a>
+                        <h3 class="blog-title">Transfer Live: Chlesea in talks 
+                        over Kimpenbe transfer</h3>
+                        <div class="blog-details">
+                            <img src="assets/Time Icon.png" alt="">
+                            <p>10h</p>
+                            <img src="assets/Chat Icon.png" alt="">
+                            <p>23</p>
+                        </div>
+                    </div>
+                </article>
+            </section>
+        </section>
+    </main>
     <!----------------------------------------------------------------
                              Main Ends
     ------------------------------------------------------------------>
