--- a/index.html
+++ b/index.html
@@ -184,6 +184,28 @@
     <!----------------------------------------------------------------
                              Footer Starts 
     ------------------------------------------------------------------>
+    <footer>
+        <section class="footer-section">
+            <div class="footer-title">
+                <h4>Goal</h4>
+            </div>
+            <hr>
+            <div class="general-links">
+                <a href="#">Contact Us</a>
+                <a href="#">Terms of Service</a>
+                <a href="#">Privacy Policy</a>
+                <a href="#">Privacy Settings</a>
+                <a href="#">Goal App</a>
+                <a href="#">Goal Live</a>
+            </div>
+            <div class="social-links">
+                <a target="_blank" href="https://www.facebook.com/"><i class="fa-brands fa-facebook"></i></a>
+                <a target="_blank" href="https://twitter.com/?lang=en"><i class="fa-brands fa-twitter"></i></a>
+                <a target="_blank" href="https://www.instagram.com/"><i class="fa-brands fa-instagram"></i></a>
+                <a target="_blank" href="https://www.youtube.com/"><i class="fa-brands fa-youtube"></i></a>
+            </div>
+        </section>
+    </footer>
     <!----------------------------------------------------------------
                              Footer Ends
     ------------------------------------------------------------------>
