tablets responsive done

--- a/index.html
+++ b/index.html
@@ -174,8 +174,10 @@
                             <p>23</p>
                         </div>
                     </div>
+                    
                 </article>
             </section>
+            <a class="nav-btn checked tablet-btn" target="_blank" href="">View All</a>
         </section>
     </main>
     <!----------------------------------------------------------------
@@ -204,6 +206,7 @@
                 <a target="_blank" href="https://www.instagram.com/"><i class="fa-brands fa-instagram"></i></a>
                 <a target="_blank" href="https://www.youtube.com/"><i class="fa-brands fa-youtube"></i></a>
             </div>
+            
         </section>
     </footer>
     <!----------------------------------------------------------------
