--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <section class="mid-section">
             <section class="nav-section">
                 <!-- Buttons on the left side -->
-                <a class="nav-btn" target="_blank" href="matches.html">Upcoming Match</a>
+                <a class="nav-btn big-btn" target="_blank" href="matches.html">Upcoming Match</a>
                 <a class="nav-btn" target="_blank" href="">All Group</a>
                 <a class="checked nav-btn" target="_blank" href="index.html">Blog</a>
             </section>
@@ -197,6 +197,7 @@
                 <a href="#">Terms of Service</a>
                 <a href="#">Privacy Policy</a>
                 <a href="#">Privacy Settings</a>
+                <span>Karim</span>
                 <a href="#">Goal App</a>
                 <a href="#">Goal Live</a>
             </div>
