--- a/matches.html
+++ b/matches.html
@@ -1,1 +1,159 @@
-<h1>Hello fklsjfdslkf</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>World Cup | Upcoming Matches</title>
+    <!------------------ favicon link ------------------------->
+    <link rel="shortcut icon" href="assets/football.ico" type="image/x-icon">
+    <!--------------------- stylesheet link -------------------------->
+    <link rel="stylesheet" href="styles/style.css">
+    <!----------------------- fontawesome -------------------------->
+    <script src="https://kit.fontawesome.com/3e76e76a24.js" crossorigin="anonymous"></script>
+
+</head>
+<body>
+    <!----------------------------------------------------------------
+                             Header Starts 
+    ------------------------------------------------------------------>
+
+    <header>
+        <section class="header-section">
+            <div class="header-details">
+                <h1 class="header-title">The Greatest show on the earth</h1>
+                <p class="header-info">The FIFA World Cup, often simply called the World Cup, is an international association football competition contested by the senior men's national teams.</p>
+                <a href="" class="btn checked">Watch Live<i class="fa-solid fa-angle-right"></i></a>
+            </div>
+            <!-- Header image -->
+            <div class="header-image">
+                <img src="assets/Banner Image.png" alt="">
+            </div>
+        </section>
+    </header>
+
+
+    <!----------------------------------------------------------------
+                             Header Ends
+    ------------------------------------------------------------------>
+
+    <!----------------------------------------------------------------
+                             Main Starts 
+    ------------------------------------------------------------------>
+    <main>
+        <section class="mid-section">
+            <section class="nav-section">
+                <!-- Buttons on the left side -->
+                <a class="nav-btn big-btn checked" target="_blank" href="matches.html">Upcoming Match</a>
+                <a class="nav-btn" target="_blank" href="">All Group</a>
+                <a class="nav-btn" target="_blank" href="index.html">Blog</a>
+            </section>
+            <!-- Will show the upcoming match cards -->
+            <section class="match-details">
+                <div class="matches">
+                    <div class="match">
+                        <div class="opponents">
+                            <img src="assets/germany Flag.png" alt="">
+                            <h3>vs</h3>
+                            <img src="assets/france-Flag.png" alt="">
+                        </div>
+                        <div class="match-info">
+                            <h2>Germany VS France</h2>
+                            <p>April 01, 2023, 1.00 AM</p>
+                        </div>
+                    </div>
+                    <div class="match">
+                        <div class="opponents">
+                            <img src="assets/germany Flag.png" alt="">
+                            <h3>vs</h3>
+                            <img src="assets/france-Flag.png" alt="">
+                        </div>
+                        <div class="match-info">
+                            <h2>Germany VS France</h2>
+                            <p>April 01, 2023, 1.00 AM</p>
+                        </div>
+                    </div>
+                    <div class="match">
+                        <div class="opponents">
+                            <img src="assets/germany Flag.png" alt="">
+                            <h3>vs</h3>
+                            <img src="assets/france-Flag.png" alt="">
+                        </div>
+                        <div class="match-info">
+                            <h2>Germany VS France</h2>
+                            <p>April 01, 2023, 1.00 AM</p>
+                        </div>
+                    </div>
+                    <div class="match">
+                        <div class="opponents">
+                            <img src="assets/germany Flag.png" alt="">
+                            <h3>vs</h3>
+                            <img src="assets/france-Flag.png" alt="">
+                        </div>
+                        <div class="match-info">
+                            <h2>Germany VS France</h2>
+                            <p>April 01, 2023, 1.00 AM</p>
+                        </div>
+                    </div>
+                    <div class="match">
+                        <div class="opponents">
+                            <img src="assets/germany Flag.png" alt="">
+                            <h3>vs</h3>
+                            <img src="assets/france-Flag.png" alt="">
+                        </div>
+                        <div class="match-info">
+                            <h2>Germany VS France</h2>
+                            <p>April 01, 2023, 1.00 AM</p>
+                        </div>
+                    </div>
+                    <div class="match">
+                        <div class="opponents">
+                            <img src="assets/germany Flag.png" alt="">
+                            <h3>vs</h3>
+                            <img src="assets/france-Flag.png" alt="">
+                        </div>
+                        <div class="match-info">
+                            <h2>Germany VS France</h2>
+                            <p>April 01, 2023, 1.00 AM</p>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <a class="nav-btn checked tablet-btn" target="_blank" href="">View All</a>
+        </section>
+    </main>
+    <!----------------------------------------------------------------
+                             Main Ends
+    ------------------------------------------------------------------>
+    <!----------------------------------------------------------------
+                             Footer Starts 
+    ------------------------------------------------------------------>
+    <footer>
+        <section class="footer-section">
+            <div class="footer-title">
+                <h4>Goal</h4>
+            </div>
+            <hr>
+            <div class="general-links">
+                <a href="#">Contact Us</a>
+                <a href="#">Terms of Service</a>
+                <a href="#">Privacy Policy</a>
+                <a href="#">Privacy Settings</a>
+                <span>Karim</span>
+                <a href="#">Goal App</a>
+                <a href="#">Goal Live</a>
+            </div>
+            <div class="social-links">
+                <a target="_blank" href="https://www.facebook.com/"><i class="fa-brands fa-facebook"></i></a>
+                <a target="_blank" href="https://twitter.com/?lang=en"><i class="fa-brands fa-twitter"></i></a>
+                <a target="_blank" href="https://www.instagram.com/"><i class="fa-brands fa-instagram"></i></a>
+                <a target="_blank" href="https://www.youtube.com/"><i class="fa-brands fa-youtube"></i></a>
+            </div>
+            
+        </section>
+    </footer>
+    <!----------------------------------------------------------------
+                             Footer Ends
+    ------------------------------------------------------------------>
+</body>
+</html>
